Issue5408- Increase text contrast for improved web accessibility (#5700)
* fix: increase contrast for text color


* aligned spacing in application status panel


* boldened and darkened headers

--- a/ui/src/app/applications/components/application-resource-tree/application-resource-tree.scss
+++ b/ui/src/app/applications/components/application-resource-tree/application-resource-tree.scss
@@ -127,7 +127,7 @@
         top: 8px;
         width: 60px;
         line-height: 1;
-        color: $argo-color-gray-5;
+        color: $argo-color-gray-7;
 
         &--big {
             background: $argo-color-gray-5;
